# fridge-recipe

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  build.gradle.kts  docker-compose.yml  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: ci.yml  deploy-ai.yml  deploy-staging.yml  pr-check.yml
androidApp/: build.gradle.kts
backend/ai-service/: .env.example  Dockerfile  Dockerfile.worker  fly.toml  pyproject.toml  railway.toml  requirements.txt  ruff.toml
backend/ai-service/app/: main.py
backend/ai-service/app/api/: ocr.py  recommend.py  vision.py
backend/ai-service/app/core/: celery_app.py  config.py  security.py
backend/ai-service/app/ml/ocr/: clova_ocr.py  receipt_parser.py
backend/ai-service/app/ml/recommendation/: engine.py
backend/ai-service/app/ml/vision/: openai_vision.py
backend/ai-service/app/tasks/: ocr_tasks.py
backend/ai-service/tests/: test_health.py  test_ocr.py  test_recommend.py
backend/main-api/: Dockerfile  build.gradle.kts
db/migration/: V1__create_users.sql  V2__create_ingredients.sql  V3__create_recipes.sql  V4__create_social.sql  V5__create_scan.sql  V6__create_notifications.sql  V7__create_refresh_tokens.sql  V8__create_indexes.sql  V9__add_likes_and_history_columns.sql
db/seed/: V100__seed_ingredient_master.sql  V101__seed_recipes.sql  V102__seed_recipe_ingredients.sql
docs/: 01-architecture.md  02-prd-analysis.md  03-design-system.md  README.md  design-system-catalog.html
frontend/web/: .env.example  .env.local.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  (+3 more)
gradle/: libs.versions.toml
shared/: build.gradle.kts
(+250 files in other folders)
